<resources>
    <string name="app_name">Books</string>
    <string name="results">Book Results</string>
    <string name="textview_book_title">Book Title</string>
    <string name="textview_book_author">Book Author</string>
    <string name="textview_book_publisher">Book Publisher</string>
    <string name="textview_published_date">Published Date</string>
    <string name="search">Search</string>
    <string name="book_title_details">TextView</string>
    <string name="book_title_subtitle">TextView</string>
    <string name="book_author_details">TextView</string>
    <string name="book_publisher_details">TextView</string>
    <string name="book_published_date_details">TextView</string>
    <string name="book_description">TextView</string>
</resources>
