<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:weightSum="100" >


    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="15"
        android:src="@drawable/ic_book_black_24dp"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="85"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bookTitle"
            android:textSize="@dimen/title_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/textview_book_title" />

        <TextView
            android:textSize="@dimen/author_text_size"
            android:id="@+id/bookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/textview_book_author" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bookPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:textAlignment="textStart"
                android:layout_weight="70"
                tools:text="@string/textview_book_publisher" />

            <TextView
                android:id="@+id/bookPublishedDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="30"
                android:textAlignment="textEnd"
                tools:text="@string/textview_published_date"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"/>

        </LinearLayout>


    </LinearLayout>




</LinearLayout>